<resources>
    <string name="app_name">mdel</string>
    <string name="home">Home</string>
    <string name="user_name">User Name</string>
    <string name="pass">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="add">Add</string>
    <string name="update_prof">Update Profile</string>
    <string name="dob">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="gender">Gender</string>
</resources>